src/objects/Premier_Tier_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Tier_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applied_Tier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applied Tier</label>
        <referenceTo>Premier_Tier__c</referenceTo>
        <relationshipName>Tier_History_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calculated_Tier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calculated Tier</label>
        <referenceTo>Premier_Tier__c</referenceTo>
        <relationshipName>Tier_History1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <label>Premier Tier History</label>
    <nameField>
        <displayFormat>PTH-{0000}</displayFormat>
        <label>Tier History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Premier Tier History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>